[gd_scene load_steps=15 format=3 uid="uid://bfg0bc7qty7hq"]

[ext_resource type="Script" uid="uid://dcaynqiip603n" path="res://menu/menu_upper.gd" id="1_yqf36"]
[ext_resource type="PackedScene" uid="uid://bfj5bos66gy5v" path="res://stats/stat_panel.tscn" id="2_0k51n"]
[ext_resource type="PackedScene" uid="uid://ksx8umkwdqi3" path="res://menu/profile_container.tscn" id="2_duqhs"]
[ext_resource type="PackedScene" uid="uid://b4drrfkarmpfy" path="res://menu/info_container.tscn" id="2_unf50"]
[ext_resource type="Script" uid="uid://cqrgskhntnrkh" path="res://menu/coin_container_gui.gd" id="3_rvrkp"]
[ext_resource type="Texture2D" uid="uid://b125axc436bbl" path="res://assets/gui/misc/coin.png" id="4_hpo3l"]
[ext_resource type="PackedScene" uid="uid://drt8ijavylpcu" path="res://menu/button_container.tscn" id="8_sbix5"]
[ext_resource type="Texture2D" uid="uid://by6cnm4pppisy" path="res://assets/gui/status_indicators/hunger_indicator.png" id="9_7c4jo"]
[ext_resource type="Texture2D" uid="uid://opemjbeflg26" path="res://assets/gui/menu/menu.png" id="9_ltdng"]
[ext_resource type="Texture2D" uid="uid://bljaqr1sorl1k" path="res://assets/gui/menu/menu_hover.png" id="10_bpkid"]
[ext_resource type="Texture2D" uid="uid://bole11g5srwvp" path="res://assets/gui/status_indicators/hygiene_indicator.png" id="10_jt82r"]
[ext_resource type="Texture2D" uid="uid://diddmi51k641w" path="res://assets/gui/status_indicators/happiness_indicator.png" id="11_uoc1p"]
[ext_resource type="Texture2D" uid="uid://bydopulk53x2b" path="res://assets/gui/status_indicators/health_indicator.png" id="12_n0naq"]
[ext_resource type="Texture2D" uid="uid://b0u0ukea4q73a" path="res://assets/gui/status_indicators/rest_indicator.png" id="13_qddsq"]

[node name="MenuUpper" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(128, 18)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_yqf36")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 18.0
grow_horizontal = 2
color = Color(0.329412, 0.341176, 0.439216, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 18.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="ProfileContainer" parent="HBoxContainer" instance=ExtResource("2_duqhs")]
unique_name_in_owner = true
layout_mode = 2

[node name="StatsContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 1
theme_override_constants/margin_right = 1

[node name="Stats" type="HBoxContainer" parent="HBoxContainer/StatsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 1

[node name="HungerPanel" parent="HBoxContainer/StatsContainer/Stats" instance=ExtResource("2_0k51n")]
layout_mode = 2
icon_texture = ExtResource("9_7c4jo")

[node name="HygienePanel" parent="HBoxContainer/StatsContainer/Stats" instance=ExtResource("2_0k51n")]
layout_mode = 2
icon_texture = ExtResource("10_jt82r")

[node name="HappinessPanel" parent="HBoxContainer/StatsContainer/Stats" instance=ExtResource("2_0k51n")]
layout_mode = 2
icon_texture = ExtResource("11_uoc1p")

[node name="HealthPanel" parent="HBoxContainer/StatsContainer/Stats" instance=ExtResource("2_0k51n")]
layout_mode = 2
icon_texture = ExtResource("12_n0naq")

[node name="RestPanel" parent="HBoxContainer/StatsContainer/Stats" instance=ExtResource("2_0k51n")]
layout_mode = 2
icon_texture = ExtResource("13_qddsq")

[node name="CoinsContainer" parent="HBoxContainer" instance=ExtResource("2_unf50")]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 2.08165e-12)
layout_mode = 2
script = ExtResource("3_rvrkp")
coin_icon = ExtResource("4_hpo3l")

[node name="MenuContainer" parent="HBoxContainer" instance=ExtResource("8_sbix5")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 1
icon_closed = ExtResource("9_ltdng")
icon_closed_hover = ExtResource("10_bpkid")
